--- a/CoreAnimationLearning/Info.plist
+++ b/CoreAnimationLearning/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.storyboardbook.zhuankuaibaopo</string>
+	<string>com.storyboardbook.zhuangkuaibaopo</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
